--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 					   				<div class="slider-text-inner js-fullheight">
 					   					<div class="desc">
 						   					<h1>Hi! <br>I'm Ker</h1>
-												<p><a target="_blank" href="C:/Ker's Portfolio/images/Resume.pdf" class="btn btn-primary btn-learn">Download CV <i class="icon-download4"></i></a></p>
+												<p><a target="_blank" href="\images\Resume.pdf" class="btn btn-primary btn-learn">Download CV <i class="icon-download4"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
@@ -116,7 +116,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 					   				<div class="slider-text-inner">
 					   					<div class="desc">
 						   					<h1>I am <br>a Software Developer</h1>
-												<p><a target="_blank" href="C:/Ker's Portfolio/images/Resume.pdf" class="btn btn-primary btn-learn">View Portfolio <i class="icon-briefcase3"></i></a></p>
+												<p><a target="_blank" href="/images/Resume.pdf" class="btn btn-primary btn-learn">View Portfolio <i class="icon-briefcase3"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
@@ -666,7 +666,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 					</div> -->
 					<div class="row">
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">	
-							<iframe width="420" height="345" src="https://www.youtube.com/embed/tgbNymZ7vqY">
+							<iframe width="420" height="345" src="https://www.youtube.com/embed/XWTntR22l6M?si=EpxaaWz4VI1fqPBC">
 							</iframe>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">	
@@ -774,7 +774,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 									<i class="icon-globe-outline"></i>
 								</div>
 								<div class="colorlib-text">
-									<p><a href="#">monteroker21@yahoo.com</a></p>
+									<p><a href="mailto:monteroker21@yahoo.com">monteroker21@yahoo.com</a></p>
 								</div>
 							</div>
 
