\ on images href for CV

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 					   				<div class="slider-text-inner js-fullheight">
 					   					<div class="desc">
 						   					<h1>Hi! <br>I'm Ker</h1>
-												<p><a target="_blank" href="\images\Resume.pdf" class="btn btn-primary btn-learn">Download CV <i class="icon-download4"></i></a></p>
+												<p><a target="_blank" href="images\Resume.pdf" class="btn btn-primary btn-learn">Download CV <i class="icon-download4"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
@@ -116,7 +116,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 					   				<div class="slider-text-inner">
 					   					<div class="desc">
 						   					<h1>I am <br>a Software Developer</h1>
-												<p><a target="_blank" href="/images/Resume.pdf" class="btn btn-primary btn-learn">View Portfolio <i class="icon-briefcase3"></i></a></p>
+												<p><a target="_blank" href="images\Resume.pdf" class="btn btn-primary btn-learn">View Portfolio <i class="icon-briefcase3"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
@@ -456,6 +456,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 											</div>
 											<div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
 												<div class="panel-body">
+													<h4><strong>Niagara College</strong></h4>
 													<p><strong>2021-2023</strong></p>
 													<p>100 Niagara College Blvd, Welland, ON L3C 7L3 <strong>Canada</strong></p>	
 													<p>I entered Niagara College Welland campus in September 08,2021 as an International student. I decided to apply as an international student
@@ -473,6 +474,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 									    </div>
 									    <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
 									        <div class="panel-body">
+												<h4><strong>University Of San Agustin</strong></h4>
 												<p><strong>2014-2018</strong></p>
 									            <p>General Luna St, Iloilo City Proper, Iloilo City, 5000 Iloilo <strong>Philippines</strong></p>
 												<p>I stared my freshman year in 2014 under the program Bachleors of Science in Accountancy with a minor of Information Technology.
@@ -491,6 +493,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 									    </div>
 									    <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
 									        <div class="panel-body">
+												<h4><strong>Rivan School of Technology</strong></h4>
 												<p><strong>2018-2018</strong></p>
 									            <p>Building, 2138, Unit A 1 – 5 Mendiola Square, Recto Ave, Manila, 1001 Metro Manila,<strong>Philippines</strong></p>	
 												<p>After graduating in 2018 I decided to enroll my self to CCNA Training. At this time I was so ammazed of hacking and make me so curious about what are the things that hackers do to bypass 
@@ -510,6 +513,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 									    </div>
 									    <div id="collapseFive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFive">
 									        <div class="panel-body">
+												<h4><strong>St. Paul School</strong></h4>
 												<p><strong>2009-2014</strong></p>
 									            <p>Gomez St., Barotac Nuevo, Iloilo 500 <strong>Philippines</strong></p>									        </div>
 									    </div>
