--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 							<div class="row">
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInLeft">
 									<div class="services color-1">
-										<span class="icon2"><i class="icon-bulb"></i></span>
-										<h3>Graphic Design</h3>
+										<span class="icon2"><i class="icon-data"></i></span>
+										<h3>SQL Management</h3>
 									</div>
 								</div>
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
@@ -159,14 +159,14 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 								</div>
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInTop">
 									<div class="services color-3">
-										<span class="icon2"><i class="icon-data"></i></span>
-										<h3>Software</h3>
+										<span class="icon2"><i class="icon-bulb"></i></span>
+										<h3>Software Development</h3>
 									</div>
 								</div>
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInBottom">
 									<div class="services color-4">
 										<span class="icon2"><i class="icon-phone3"></i></span>
-										<h3>Application</h3>
+										<h3>Application Development</h3>
 									</div>
 								</div>
 							</div>
@@ -317,9 +317,9 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 							<div class="progress-wrap">
 								<h3>.Net Framework</h3>
 								<div class="progress">
-								 	<div class="progress-bar color-2" role="progressbar" aria-valuenow="80"
-								  	aria-valuemin="0" aria-valuemax="100" style="width:80%">
-								    <span>80%</span>
+								 	<div class="progress-bar color-2" role="progressbar" aria-valuenow="70"
+								  	aria-valuemin="0" aria-valuemax="100" style="width:70%">
+								    <span>70%</span>
 								  	</div>
 								</div>
 							</div>
@@ -361,9 +361,9 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 							<div class="progress-wrap">
 								<h3>JSON</h3>
 								<div class="progress">
-								 	<div class="progress-bar color-6" role="progressbar" aria-valuenow="70"
-								  	aria-valuemin="0" aria-valuemax="100" style="width:70%">
-								    <span>70%</span>
+								 	<div class="progress-bar color-6" role="progressbar" aria-valuenow="60"
+								  	aria-valuemin="0" aria-valuemax="100" style="width:60%">
+								    <span>60%</span>
 								  	</div>
 								</div>
 							</div>
@@ -383,9 +383,9 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 							<div class="progress-wrap">
 								<h3>JQuery</h3>
 								<div class="progress">
-								 	<div class="progress-bar color-2" role="progressbar" aria-valuenow="70"
-								  	aria-valuemin="0" aria-valuemax="100" style="width:70%">
-								    <span>70%</span>
+								 	<div class="progress-bar color-2" role="progressbar" aria-valuenow="60"
+								  	aria-valuemin="0" aria-valuemax="100" style="width:60%">
+								    <span>60%</span>
 								  	</div>
 								</div>
 							</div>
@@ -405,9 +405,9 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 							<div class="progress-wrap">
 								<h3>CSS</h3>
 								<div class="progress">
-								 	<div class="progress-bar color-4" role="progressbar" aria-valuenow="90"
-								  	aria-valuemin="0" aria-valuemax="100" style="width:90%">
-								    <span>90%</span>
+								 	<div class="progress-bar color-4" role="progressbar" aria-valuenow="80"
+								  	aria-valuemin="0" aria-valuemax="100" style="width:80%">
+								    <span>80%</span>
 								  	</div>
 								</div>
 							</div>
@@ -800,7 +800,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 								</div>
 							</div>
 						</div>
-						<div class="col-md-7 col-md-push-1">
+						<!-- <div class="col-md-7 col-md-push-1">
 							<div class="row">
 								<div class="col-md-10 col-md-offset-1 col-md-pull-1 animate-box" data-animate-effect="fadeInRight">
 									<form action="">
@@ -823,7 +823,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 								</div>
 								
 							</div>
-						</div>
+						</div> -->
 					</div>
 				</div>
 			</section>
