--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 					<ul>
 						<li class="active"><a href="#" data-nav-section="home">Home</a></li>
 						<li><a href="#" data-nav-section="about">About</a></li>
-						<li><a href="#" data-nav-section="services">Services</a></li>
+						<!-- <li><a href="#" data-nav-section="services">Services</a></li> -->
 						<li><a href="#" data-nav-section="skills">Skills</a></li>
 						<li><a href="#" data-nav-section="education">Education</a></li>
 						<li><a href="#" data-nav-section="experience">Experience</a></li>
@@ -185,7 +185,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 
 
 			
-			<section class="colorlib-services" data-section="services">
+			<!-- <section class="colorlib-services" data-section="services">
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
@@ -261,7 +261,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 							</div>
 						</div>
 					</div>
-				</div>
+				</div> -->
 			</section>
 			
 			<!-- <div id="colorlib-counter" class="colorlib-counters" style="background-image: url(images/cover_bg_1.jpg);" data-stellar-background-ratio="0.5">
@@ -299,9 +299,9 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
+						<!-- <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
 							<p>The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen. She packed her seven versalia, put her initial into the belt and made herself on the way.</p>
-						</div>
+						</div> -->
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="progress-wrap">
 								<h3>C#</h3>
@@ -673,10 +673,12 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 							<iframe width="420" height="345" src="https://www.youtube.com/embed/XWTntR22l6M?si=EpxaaWz4VI1fqPBC">
 							</iframe>
 						</div>
+						
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">	
 							<iframe width="420" height="345" src="https://www.youtube.com/embed/tgbNymZ7vqY">
 							</iframe>
 						</div>
+
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">	
 							<iframe width="420" height="345" src="https://www.youtube.com/embed/tgbNymZ7vqY">
 							</iframe>
