--- a/index.html
+++ b/index.html
@@ -675,11 +675,11 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 						</div>
 						
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">	
-							<iframe width="420" height="345" src="https://www.youtube.com/embed/tgbNymZ7vqY">
+							<iframe width="420" height="345" src="https://www.youtube.com/embed/-KP9wZp22i8?si=0LKNrvGQ7ERGyZ_R">
 							</iframe>
 						</div>
 
-						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">	
+						<!-- <div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">	
 							<iframe width="420" height="345" src="https://www.youtube.com/embed/tgbNymZ7vqY">
 							</iframe>
 						</div>
@@ -707,13 +707,13 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">	
 							<iframe width="420" height="345" src="https://www.youtube.com/embed/tgbNymZ7vqY">
 							</iframe>
-						</div>
+						</div> -->
 					</div>
-					<div class="row">
+					<!-- <div class="row">
 						<div class="col-md-12 animate-box">
 							<p><a href="#" class="btn btn-primary btn-lg btn-load-more">Load more <i class="icon-reload"></i></a></p>
 						</div>
-					</div>
+					</div> -->
 				</div>
 			</section>
 
