--- a/index.html
+++ b/index.html
@@ -536,6 +536,56 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 					<div class="row">
 						<div class="col-md-12">
 				         <div class="timeline-centered">
+
+							<article class="timeline-entry animate-box" data-animate-effect="fadeInTop">
+					            <div class="timeline-entry-inner">
+					               <div class="timeline-icon color-4">
+					                  <i class="icon-pen2"></i>
+					               </div>
+					               <div class="timeline-label">
+					               	<h2><a href="#">Software Developer at Anderson Group BPO Inc.,</a> <span>2017-2018</span></h2>
+										<p>
+											<ul>
+												<li>Using HTML, CSS and PHP we created and maintained the company’s website.</li>
+												<li>We created the following:</li>
+													<ol>
+														<li>HROnline - Created and maintained a website for Anderson using, HTML, CSS, PHP.</li>
+														<li>Payroll - Created a brand new payroll system using CSS, C#, PHP, HTML.</li>
+														<li>ElectronicLogBook- A system for employees attendance that would scan your ID at the same time you need to input your pin to clock in and out. We created this system using Javascript, C#, CSS.</li>
+														<li>AndersonSurvey, AndersonForms - this are the type of system that we created using C# after we succeeded we merge this system to our other  existing system.</li>
+													</ol>
+												<li>Promoted as Project Manager and tasked to do the following:</li>
+													<ol>
+														<li>Manage the 42 software development interns.</li>
+														<li>Weekly meeting with CEO,HR and leader of each departments to present the progress and requested changes of each systems.</li>
+														<li>Tasked to interview applicants for internship.</li>
+													</ol> 
+											</ul>
+										</p>
+					               </div>
+					            </div>
+					         </article>
+
+							 <article class="timeline-entry animate-box" data-animate-effect="fadeInTop">
+					            <div class="timeline-entry-inner">
+					               <div class="timeline-icon color-5">
+					                  <i class="icon-pen2"></i>
+					               </div>
+					               <div class="timeline-label">
+					               	<h2><a href="#">Software Developer Intern at HALO Technology Consultant</a> <span>2022-2023</span></h2>
+										<p>
+											<ul>
+												<li>Worked with MagicInfo’s API to make website</li>
+												<li>SQL queries for dashboard components like user logins, menus, licenseverification, and backup systems.</li>
+												<li>Overseeing device management through the development and deployment of content, as well as managing promotions and menu board scheduling.</li>
+												<li>Tailoring system dashboards to meet users' needs.</li>
+												
+											</ul>
+										</p>
+					               </div>
+					            </div>
+					         </article>
+
 					         <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
 					            <div class="timeline-entry-inner">
 
@@ -582,54 +632,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 					            </div>
 					         </article>
 
-					         <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
-					            <div class="timeline-entry-inner">
-					               <div class="timeline-icon color-3">
-					                  <i class="icon-pen2"></i>
-					               </div>
-					               <div class="timeline-label">
-					               	<h2><a href="#">NeuroTechnician at Iloilo NeuroScience Group Inc.,</a> <span>2018-2020</span></h2>
-					                  	<p>
-											<ul>
-												<li>Performed Electroencephalogram(EEG) to patients.</li>
-												<li>Performed Electromyography(EMG) to patients.</li>
-												<li>Performed other type of neuro test to patients.</li>
-												<li>Received payment from customer, and gave correct change.</li>
-												<li>Encode Patient information and Patient results from the 20.</li>
-												<li>Encode Sales and generate sales report.</li>
-												<li>Troubleshoot company’s computer in terms of software/Hardware, troubleshoot EEG/EMG machine</li>
-											</ul>
-										</p>
-					               </div>
-					            </div>
-					         </article>
-
-					         <article class="timeline-entry animate-box" data-animate-effect="fadeInTop">
-					            <div class="timeline-entry-inner">
-					               <div class="timeline-icon color-4">
-					                  <i class="icon-pen2"></i>
-					               </div>
-					               <div class="timeline-label">
-					               	<h2><a href="#">Software Developer Intern at Anderson Group BPO Inc.,</a> <span>2017-2018</span></h2>
-										<p>
-											<ul>
-												<li>Using HTML, CSS and PHP we created and maintained the company’s website.</li>
-												<li>We created the following:</li>
-													<ol>
-														<li>HROnline - Created and maintained a website for Anderson using, HTML, CSS, PHP.</li>
-														<li>Payroll - Created a brand new payroll system using CSS, C#, PHP, HTML.</li>
-														<li>ElectronicLogBook- A system for employees attendance that would scan your ID at the same time you need to input your pin to clock in and out. We created this system using Javascript, C#, CSS.</li>
-														<li>AndersonSurvey, AndersonForms - this are the type of system that we created using C# after we succeeded we merge this system to our other  existing system.</li>
-														<li>Promoted as Project Manager and tasked to do the following:</li>
-														<li>Manage the 42 software development interns.</li>
-														<li>Weekly meeting with CEO,HR and leader of each departments to present the progress and requested changes of each systems.</li>
-														<li>Tasked to interview applicants for internship.</li>
-													</ol> 
-											</ul>
-										</p>
-					               </div>
-					            </div>
-					         </article>
+					         
 
 					         <!-- <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
 					            <div class="timeline-entry-inner">
