--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 								<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
 									<div class="hire">
 										<h2>I am happy to know you're <br>checking my credentials!!</h2>
-										<a href="#" class="btn-hire">Hire me</a>
+										<a href="mailto: monteroker21@yahoo.com" class="btn-hire">Hire me</a>
 									</div>
 								</div>
 							</div>
@@ -487,7 +487,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 									<div class="panel panel-default">
 									    <div class="panel-heading" role="tab" id="headingFour">
 									        <h4 class="panel-title">
-									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">CISCO Certified Network Associate (CCNA)
+									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">CISCO Certified Network Associate (CCNA) with CompTIA A+ 
 									            </a>
 									        </h4>
 									    </div>
