--- a/index.html
+++ b/index.html
@@ -491,8 +491,12 @@
 													<h4><strong>Niagara College</strong></h4>
 													<p><strong>2021-2023</strong></p>
 													<p>100 Niagara College Blvd, Welland, ON L3C 7L3 <strong>Canada</strong></p>	
-													<p>I entered Niagara College Welland campus in September 08,2021 as an International student. I decided to apply as an international student
-														to expand my knowledge in programming. I believed that there's no ending study if you're into this profession. </p>
+													<p>I earned a Diploma in Computer Programming, which built upon my foundational knowledge from my Bachelor's degree. 
+														This program deepened my proficiency in various programming languages, including Java, C++, and Python, while also 
+														introducing me to newer technologies and frameworks. Through hands-on projects, I honed my skills in software development, 
+														algorithm design, and debugging. Additionally, I gained practical experience in developing applications, working with APIs, 
+														and implementing best practices in coding standards and version control, further solidifying my ability to deliver efficient
+														and scalable software solutions. </p>
 												</div>
 											</div>
 										</div>
@@ -509,9 +513,11 @@
 												<h4><strong>University Of San Agustin</strong></h4>
 												<p><strong>2013-2018</strong></p>
 									            <p>General Luna St, Iloilo City Proper, Iloilo City, 5000 Iloilo <strong>Philippines</strong></p>
-												<p>I stared my freshman year in 2014 under the program Bachleors of Science in Accountancy with a minor of Information Technology.
-													During my freshman years I realized that I am more interested in the field of Information Technology. So I decided to shift my program
-													 to Bachelor of Science in Information Technology.
+												<p>I hold a Bachelor's Degree in Information Technology, which provided me with a comprehensive understanding of computer systems, 
+													networking, and software development. My education equipped me with skills in programming languages such as Java, Python, and C++,
+													 along with expertise in database management, systems analysis, and network security. I also gained practical experience in IT infrastructure 
+													 management, cloud computing, and cybersecurity, enabling me to design, implement, and maintain secure and efficient IT solutions that align with 
+													 organizational needs and industry standards.
 												</p>
 									        </div>
 									    </div>
@@ -528,9 +534,11 @@
 												<h4><strong>Rivan School of Technology</strong></h4>
 												<p><strong>2018-2018</strong></p>
 									            <p>Building, 2138, Unit A 1 – 5 Mendiola Square, Recto Ave, Manila, 1001 Metro Manila,<strong>Philippines</strong></p>	
-												<p>After graduating in 2018 I decided to enroll my self to CCNA Training. At this time I was so ammazed of hacking and make me so curious about what are the things that hackers do to bypass 
-													the system. As time passes by I realized that I am more interested in the field of programming. So I decided to enroll my self to Niagara College Computer Programming program to enhance my skills, 
-													and be a competetive programmer in the future.
+												<p>With my CISCO Certified Network Associate (CCNA) and CompTIA A+ certifications, I have developed a strong foundation in 
+													networking and IT support. My training has equipped me with the ability to configure and manage network devices, understand 
+													and implement routing protocols, and troubleshoot complex network issues. I also gained expertise in hardware and software management,
+													 including the installation and maintenance of operating systems, computer assembly, and the implementation of essential cybersecurity measures. 
+													 These certifications have honed my problem-solving skills, enabling me to diagnose and resolve both hardware and network-related issues efficiently.
 												</p>
 									        </div>
 									    </div>
