--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 			<div class="text-center">
 				<div class="author-img" style="background-image: url(images/picture1.jpg);"></div>
 				<h1 id="colorlib-logo"><a href="index.html">Ker Joshua Montero</a></h1>
-				<span class="position"><a href="#">Software Developer | Web Developer | Web Designer </a> in Canada</span>
+				<span class="position"><a href="#">Software Developer | Web Developer | Web Designer | Database Developer</a> in Canada</span>
 			</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
 				<div id="navbar" class="collapse">
