--- a/index.html
+++ b/index.html
@@ -138,14 +138,14 @@
 							</div>
 						</div>
 					</li>
-					<li style="background-image: url(images/WebDesignerIcon-3.jpg);">
+					<li style="background-image: url(images/test1.jpg);">
 						<div class="overlay"></div>
 						<div class="container-fluid">
 							<div class="row">
 								<div class="col-md-6 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
 									<div class="slider-text-inner">
 										<div class="desc">
-											<h1><a style="color:red">I am <br> a Web Deigner</a>></h1>
+											<h1><a style="color:black">I am <br> a Web Deigner</a></h1>
 											 <!-- <p><a target="_blank" href="images\Resume.pdf" class="btn btn-primary btn-learn">View Portfolio <i class="icon-briefcase3"></i></a></p> -->
 										 </div>
 									</div>
