Fix the padding on slide

--- a/index.html
+++ b/index.html
@@ -80,9 +80,12 @@
 				</div>
 			</nav>
 			
-<div class="download-wrap">
-        <a href="images/Resume.pdf" target="_blank" class="btn-download"><i class="icon-download4"></i> Download Resume</a>
-    </div>
+			<!-- Replace your current Download Resume link with this -->
+			<div class="sidebar-download-container">
+				<a href="images/Resume.pdf" target="_blank" class="btn-sidebar-download">
+					<i class="icon-download4"></i> Download Resume
+				</a>
+			</div>
 			<div class="colorlib-footer">
 				<p><small>&copy; <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->						<!--This is for href-->		<!-- <a href="https://colorlib.com" target="_blank">Ker Joshua Montero</a>-->
 				Copyright <script>document.write(new Date().getFullYear());</script> All rights reserved. </i> by <a><strong>Ker Joshua Montero</strong></a>
@@ -99,78 +102,79 @@
 		<div id="colorlib-main">
 			<section id="colorlib-hero" class="js-fullheight" data-section="home">
 			<div class="flexslider js-fullheight">
-				<ul class="slides">
-				<!-- Slide 1: PHP screengrab -->
-				<li style="background-image: url(images/Slider1.jpg); background-size: cover; background-position: center;">
-					<div class="overlay"></div>
-					<div class="container-fluid">
-					<div class="row">
-						<div class="col-md-6 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
-						<div class="slider-text-inner js-fullheight">
-							<div class="desc">
-							<h1 style="color: white;">Hi! <br>I'm Ker Joshua Montero</h1>
-							<p style="color: white;"><a target="_blank" href="images/Resume.pdf" class="btn btn-primary btn-learn"><strong>Download CV</strong> <i class="icon-download4"></i></a></p>
-							</div>
-						</div>
-						</div>
-					</div>
-					</div>
-				</li>
+	<ul class="slides">
+    <!-- Slide 1: Full Stack & Digitization -->
+    <li style="background-image: url(images/Slider1.jpg); background-size: cover; background-position: center;">
+        <div class="overlay"></div>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-6 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
+                    <div class="slider-text-inner js-fullheight">
+                        <div class="desc">
+                            <h1 style="color: white;">Full Stack <br>System Architect</h1>
+                            <p style="color: white;">Digitizing legacy operations with secure, high-performance web ecosystems.</p>
+                            <p style="color: white;"><a target="_blank" href="images/Resume.pdf" class="btn btn-primary btn-learn"><strong>Download CV</strong> <i class="icon-download4"></i></a></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </li>
 
-				<!-- Slide 2: Whiteboard diagram -->
-				<li style="background-image: url(images/Slider2.jpg); background-size: cover; background-position: center;">
-					<div class="overlay"></div>
-					<div class="container-fluid">
-					<div class="row">
-						<div class="col-md-6 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
-						<div class="slider-text-inner">
-							<div class="desc">
-							<h1 style="color: white;">I am a <br>Software Developer</h1>
-							<p style="color: white;">Experienced in ASP.NET MVC, SQL, and PHP</p>
-							<p style="color: white;"><a target="_blank" href="images/Resume.pdf" class="btn btn-primary btn-learn"><strong>Download CV</strong> <i class="icon-download4"></i></a></p>
-							</div>
-						</div>
-						</div>
-					</div>
-					</div>
-				</li>
+    <!-- Slide 2: Database Engineering -->
+    <li style="background-image: url(images/Slider2.jpg); background-size: cover; background-position: center;">
+        <div class="overlay"></div>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-6 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
+                    <div class="slider-text-inner">
+                        <div class="desc">
+                            <h1 style="color: white;">Expert in <br>Database Engineering</h1>
+                            <p style="color: white;">Designing high-availability SQL Server schemas for mission-critical data integrity.</p>
+                            <p style="color: white;"><a target="_blank" href="images/Resume.pdf" class="btn btn-primary btn-learn"><strong>Download CV</strong> <i class="icon-download4"></i></a></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </li>
 
-				<!-- Slide 3: MacBook workspace -->
-				<li style="background-image: url(images/Slider3.jpg); background-size: cover; background-position: center;">
-					<div class="overlay"></div>
-					<div class="container-fluid">
-					<div class="row">
-						<div class="col-md-6 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
-						<div class="slider-text-inner">
-							<div class="desc">
-							<h1 style="color: white;">I am a <br>Web Developer</h1>
-							<p style="color: white;">Building responsive web applications</p>
-							<p style="color: white;"><a target="_blank" href="images/Resume.pdf" class="btn btn-primary btn-learn"><strong>Download CV</strong> <i class="icon-download4"></i></a></p>
-							</div>
-						</div>
-						</div>
-					</div>
-					</div>
-				</li>
+    <!-- Slide 3: Software & Security -->
+    <li style="background-image: url(images/Slider3.jpg); background-size: cover; background-position: center;">
+        <div class="overlay"></div>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-6 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
+                    <div class="slider-text-inner">
+                        <div class="desc">
+                            <h1 style="color: white;">Secure Software <br>Development</h1>
+                            <p style="color: white;">Implementing RBAC frameworks and encrypted authentication for enterprise compliance.</p>
+                            <p style="color: white;"><a target="_blank" href="images/Resume.pdf" class="btn btn-primary btn-learn"><strong>Download CV</strong> <i class="icon-download4"></i></a></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </li>
 
-				<!-- Slide 4: Typing / coding -->
-				<li style="background-image: url(images/Slider4.jpg); background-size: cover; background-position: center;">
-					<div class="overlay"></div>
-					<div class="container-fluid">
-					<div class="row">
-						<div class="col-md-6 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
-						<div class="slider-text-inner">
-							<div class="desc">
-							<h1 style="color: white;">I am a <br>Web Designer</h1>
-							<p style="color: white;">Creating clean & modern UI</p>
-							<p style="color: white;"><a target="_blank" href="images/Resume.pdf" class="btn btn-primary btn-learn"><strong>Download CV</strong> <i class="icon-download4"></i></a></p>
-							</div>
-						</div>
-						</div>
-					</div>
-					</div>
-				</li>
-				</ul>
+    <!-- Slide 4: Leadership & Project Management -->
+    <li style="background-image: url(images/Slider4.jpg); background-size: cover; background-position: center;">
+        <div class="overlay"></div>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-6 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
+                    <div class="slider-text-inner">
+                        <div class="desc">
+                            <h1 style="color: white;">Technical Leadership <br>& Project Management</h1>
+                            <p style="color: white;">Proven track record of managing large-scale technical teams and the full SDLC.</p>
+                            <p style="color: white;"><a target="_blank" href="images/Resume.pdf" class="btn btn-primary btn-learn"><strong>Download CV</strong> <i class="icon-download4"></i></a></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </li>
+</ul>
 			</div>
 			</section>
 
